<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonateFragment">

    <FrameLayout
        android:id="@+id/fragment_container2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="57dp">


    </FrameLayout>

    <TextView
        android:id="@+id/donationTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donations1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="115dp"
        android:layout_marginStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/donationTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donations2"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/donationTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donations3"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <Button
        android:id="@+id/paypalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="405dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/paypal"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/squareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:text="@string/square"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paypalButton" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="117dp"
        android:layout_height="117dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/donationTextView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>